--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Exo+2:300,400,700&amp;subset=latin-ext"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
