--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>HR Desk</title>
+    <meta name="keywords" content="hr, desk" />
+    <meta name="description" content="HR desk sample" />
+    <meta name="author" content="Vaclav Frolik" />
     <link
       href="https://fonts.googleapis.com/css?family=Exo+2:300,400,700&amp;subset=latin-ext"
       rel="stylesheet"
